# rnix-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md  README.md.skt.md
.github/workflows/: build-and-test.yml
benches/: all-packages.rs
examples/: rnix-analyze.rs  simple.rs
src/: lib.rs  scope.rs
src/references/: mod.rs
src/scope/: definition.rs  definition_path.rs  mod.rs  scope.rs  tree.rs
src/snapshots/: rnix_analyzer__scope__tests__no_scopes.snap  rnix_analyzer__scope__tests__scope_attr_set.snap  rnix_analyzer__scope__tests__scope_lambda_pattern.snap  rnix_analyzer__scope__tests__scope_lambda_pattern_at.snap  rnix_analyzer__scope__tests__scope_lambda_simple.snap  rnix_analyzer__scope__tests__scope_let_in_error_already_defined.snap  rnix_analyzer__scope__tests__scope_let_in_error_inherit_already_defined.snap  rnix_analyzer__scope__tests__scope_let_in_error_inherit_from_already_defined.snap  rnix_analyzer__scope__tests__scope_let_in_error_nested_already_defined.snap  rnix_analyzer__scope__tests__scope_let_in_error_nested_attr_already_defined_in_parent.snap  rnix_analyzer__scope__tests__scope_let_in_error_nested_parent_already_defined.snap  rnix_analyzer__scope__tests__scope_let_in_incremental_nested_building.snap  rnix_analyzer__scope__tests__scope_let_in_inherit.snap  rnix_analyzer__scope__tests__scope_let_in_inherit_from.snap  rnix_analyzer__scope__tests__scope_let_in_multiple_nested_variables.snap  rnix_analyzer__scope__tests__scope_let_in_multiple_nested_variables_with_same_prefix.snap  rnix_analyzer__scope__tests__scope_let_in_multiple_variable.snap  (+8 more)
(+86 files in other folders)
