[package]
name = "rnix_analyzer"
version = "0.1.0"
authors = ["Stefan Lau <github@stefanlau.com>"]
edition = "2018"

[dependencies]
rnix = { git = "https://github.com/nix-community/rnix-parser.git", rev = "d0d195592b565a45a20e96b9bddebb432b556c47" }
id-arena = "2.2"
log = "0.4.11"

[dev-dependencies]
insta = "0.13.1"
criterion = "0.3.0"
rayon = "1.3.0"
rand = "0.7.0"

[[bench]]
name = "all-packages"
path = "./benches/all-packages.rs"
harness = false