[package]
name = "rnix_analyzer"
version = "0.1.0"
authors = ["Stefan Lau <github@stefanlau.com>"]
edition = "2018"

[dependencies]
rnix = "0.9"
id-arena = "2.2"
log = "0.4"

[dev-dependencies]
insta = "1.7.1"
criterion = "0.3.4"
rayon = "1.5.0"
rand = "0.8.3"

[[bench]]
name = "all-packages"
path = "./benches/all-packages.rs"
harness = false