[package]
name = "rnix_analyzer"
version = "0.1.0"
authors = ["Stefan Lau <github@stefanlau.com>"]
edition = "2018"

[dependencies]
rnix = "0.9"
id-arena = "2.2"
log = "0.4"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
insta = "1.7"
criterion = "0.3"
rayon = "1.5"
rand = "0.8"
skeptic = "0.13"

[[bench]]
name = "all-packages"
path = "./benches/all-packages.rs"
harness = false